# cashewnix

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  rustfmt.toml
.github/workflows/: build.yml  test.yml  update-flake.yaml
data/: config.json  private  public
data/configs/: 2024-06-04T09:40:00+00:00.json
nix/: module.nix
nix/tests/: smoke-harmonia.nix  smoke-nix-serve.nix  smoke.nix
scripts/: new_config_test.sh  run_with_current_service_config.sh
src/: config.rs  main.rs  signing.rs  util.rs
src/binary_cache_proxy/: dedup.rs  mod.rs
src/discover/: combinators.rs  mod.rs  network.rs  proto.rs
