[package]
name = "cashewnix"
version = "0.1.0"
edition = "2021"
license = "UNLI"

[dependencies]
tokio = { version = "1.37.0", features = [
  "net",
  "rt",
  "signal",
  "macros",
  "time",
  "sync",
] }
eyre = "0.6.12"
tracing = "0.1.39"
serde = { version = "1.0.201", features = ["derive"] }
rmp-serde = "1.3.0"
tokio-util = "0.7.11"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rtnetlink = "0.14.1"
futures = { version = "0.3.30", default-features = false, features = [
  "std",
  "alloc",
] }
netlink-packet-route = "0.19.0"
netlink-sys = "0.8.6"
tokio-stream = "0.1.15"
url = { version = "2.5.0", features = ["serde"] }
axum = { version = "0.7.5", features = ["macros"] }
base64 = "0.22.1"
ring-compat = { version = "0.8.0", default-features = false, features = [
  "signature",
  "rand_core",
] }
rand_core = { version = "0.6.4", features = ["getrandom", "std"] }
ahash = "0.8.11"
reqwest = { version = "0.12.4", default-features = false, features = [
  "rustls-tls-native-roots",
  "http2",
  "deflate",
  "zstd",
  "brotli",
  "gzip",
] }
serde_json = "1.0.117"
humantime-serde = "1.1.1"
arc-swap = "1.7.1"
