[package]
name = "cashewnix"
version = "0.1.0"
edition = "2021"
license = "UNLICENSE OR MIT"

[dependencies]
ahash = "0.8.11"
arc-swap = "1.7.1"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
eyre = "0.6.12"
futures = {
  version = "0.3.30",
  default-features = false,
  features = [
    "alloc",
    "std",
  ]
}
humantime-serde = "1.1.1"
netlink-sys = { version = "0.8.8", features = ["tokio"] }
rand_core = { version = "0.6.4", features = ["getrandom", "std"] }
reqwest = {
  version = "0.13.2",
  features = [
    "brotli",
    "deflate",
    "gzip",
    "http2",
    "zstd",
  ]
}
ring-compat = {
  version = "0.8.0",
  default-features = false,
  features = [
    "rand_core",
    "signature",
  ]
}
rmp-serde = "1.3.0"
rtnetlink = "0.21.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "2.0.18"
tokio = {
  version = "1.37.0",
  features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
  ]
}
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
